Remove writes and some clean ups
Writes were not tested at all, this is not our focus on this for now,
and we'll need to add some `fsync` support for it to be usable in
practice anyway, so leaving it off for now, and can re-introduce later
correctly if needs be.